[update] update api gateway
